--- a/Calculadora/app/src/main/res/layout-land/activity_main.xml
+++ b/Calculadora/app/src/main/res/layout-land/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_marginBottom="-6sp"
                 android:layout_weight="0.2"
                 android:backgroundTint="@color/black"
-                android:text="AC"
+                android:text="C"
                 android:textSize="30sp"
                 android:id="@+id/btnBorrar"/>
 
