--- a/Calculadora/app/src/main/res/layout/activity_main.xml
+++ b/Calculadora/app/src/main/res/layout/activity_main.xml
@@ -5,27 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:backgroundTint="@color/grisOscuro"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_marginBottom="-5sp"
-        android:textColor="@color/white"
-        android:textSize="100sp"
-        android:textAlignment="textEnd"
         android:layout_height="0dp"
+        android:layout_marginBottom="-5sp"
         android:layout_weight="0.3"
-        />
+        android:textAlignment="textEnd"
+        android:textColor="@color/black"
+        android:textSize="100sp" />
 
     <LinearLayout
         android:id="@+id/teclas"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_weight="0.7"
-        android:background="@color/grisOscuro">
+        android:layout_weight="0.7">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -39,7 +36,7 @@
                 android:layout_marginTop="-6sp"
                 android:textSize="30sp"
                 android:backgroundTint="@color/black"
-                android:text="AC"
+                android:text="C"
                 android:id="@+id/btnBorrar"/>
             <Button
                 android:layout_width="0dp"
