--- a/Practica2/app/src/main/res/layout/activity_aleatorio.xml
+++ b/Practica2/app/src/main/res/layout/activity_aleatorio.xml
@@ -112,7 +112,13 @@
             android:layout_gravity="center"
             android:id="@+id/imagen_cohete"
             />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            />
 
     </RadioGroup>
+
 
 </LinearLayout>
