--- a/StreetFighter/app/src/main/res/layout-land/activity_game.xml
+++ b/StreetFighter/app/src/main/res/layout-land/activity_game.xml
@@ -1,37 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondonegro"
-    tools:ignore="MissingDefaultResource">
-
-
+    tools:ignore="MissingDefaultResource"
+    android:background="@drawable/fondonegro">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
         >
 
         <ImageView
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_margin="10dp"
-
+            android:layout_weight="0.25"
+            android:layout_marginRight="100dp"
+            android:id="@+id/imageView1"
             />
 
         <ImageView
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_margin="10dp" />
-
+            android:layout_weight="0.25"
+            android:layout_marginRight="100dp"
+            android:src="@drawable/vs"
+            />
         <ImageView
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_margin="10dp" />
+            android:layout_weight="0.25"
+            android:scaleX="-1"
+            android:id="@+id/imageView2"
+            />
 
 
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/recyclerView"
+
+        >
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Jugar"
+        android:layout_gravity="center"
+        android:textColor="@color/red"
+        android:backgroundTint="@color/yellow"
+        />
+
 </LinearLayout>
