--- a/StreetFighter/app/src/main/res/layout-land/activity_game.xml
+++ b/StreetFighter/app/src/main/res/layout-land/activity_game.xml
@@ -18,7 +18,7 @@
             android:layout_height="100dp"
             android:layout_weight="0.25"
             android:layout_marginRight="100dp"
-            android:id="@+id/imageView1"
+            android:id="@+id/imageViewPlayer1"
             />
 
         <ImageView
@@ -33,7 +33,7 @@
             android:layout_height="100dp"
             android:layout_weight="0.25"
             android:scaleX="-1"
-            android:id="@+id/imageView2"
+            android:id="@+id/imageViewPlayer2"
             />
 
 
