--- a/StreetFighter/app/src/main/res/layout-land/activity_game.xml
+++ b/StreetFighter/app/src/main/res/layout-land/activity_game.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MissingDefaultResource"
-    android:background="@drawable/fondonegro">
+    android:background="@drawable/fondonegro"
+    android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
         android:layout_gravity="center"
         android:textColor="@color/red"
         android:backgroundTint="@color/yellow"
+        android:id="@+id/botonJugar"
         />
 
 </LinearLayout>
