--- a/StreetFighter/app/src/main/res/layout-land/image_character.xml
+++ b/StreetFighter/app/src/main/res/layout-land/image_character.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="MissingDefaultResource">
+    tools:ignore="MissingDefaultResource"
+    android:background="@drawable/fondonegro">
 
     <ImageView
         android:layout_width="100dp"
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textViewNombreCharacter"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         />
 
     <TextView
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textViewCaracteristicaCharacter"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         />
 
 
