--- a/StreetFighter/app/src/main/res/layout-land/image_character.xml
+++ b/StreetFighter/app/src/main/res/layout-land/image_character.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="100dp"
+    android:layout_height="130dp"
     tools:ignore="MissingDefaultResource"
-    android:background="@drawable/fondonegro">
+    android:gravity="center"
+    android:background="@drawable/fondonegro"
+    >
 
     <ImageView
         android:layout_width="100dp"
