--- a/StreetFighter/app/src/main/res/layout-land/image_character_fight.xml
+++ b/StreetFighter/app/src/main/res/layout-land/image_character_fight.xml
@@ -2,24 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="320dp"
+    android:layout_height="100dp"
+    android:gravity="center"
     tools:ignore="MissingDefaultResource"
-    android:padding="30dp"
-    android:layout_margin="20dp">
+    android:layout_margin="20dp"
+    android:background="@drawable/fondonegro"
+    >
 
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/imagenPlayerUno"
         android:layout_gravity="center"
         android:layout_marginRight="10dp"
         />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/imagenVersus"
         android:layout_gravity="center"
         android:layout_marginRight="10dp"
@@ -27,8 +29,8 @@
         />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/imagenPlayerDos"
         android:layout_gravity="center"
         />
