--- a/ElementosMaterial/app/src/main/res/layout/main_content.xml
+++ b/ElementosMaterial/app/src/main/res/layout/main_content.xml
@@ -12,5 +12,10 @@
         android:id="@+id/toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/sitioFragment"
+        />
 
 </LinearLayout>
