--- a/ProyectoFinalAndroid/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/ProyectoFinalAndroid/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,10 +8,23 @@
     android:orientation="vertical"
     android:background="@drawable/fondofutbol"
     android:layout_gravity="center"
+    android:id="@+id/drawer_layout"
     >
 
+    <include layout="@layout/main_content"></include>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/navigation_view"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/menu_nav"
+        app:headerLayout="@layout/header_nav"
+        />
 
 
 
 
-</LinearLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
