--- a/ProyectoFinalAndroid/app/src/main/res/layout/fragment_equipo.xml
+++ b/ProyectoFinalAndroid/app/src/main/res/layout/fragment_equipo.xml
@@ -5,19 +5,9 @@
     android:layout_height="match_parent"
     >
 
-    <ImageView
-        android:layout_width="200px"
-        android:layout_height="200px"
-        android:layout_gravity="center"
-        android:id="@+id/imagenFragmentEquipos"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="40dp"
-        android:id="@+id/textViewFragmentEquipos"
-        />
+  <androidx.recyclerview.widget.RecyclerView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/recyclerEquipos"/>
 
 </LinearLayout>
