--- a/ProyectoFinalAndroid/app/src/main/res/layout/adapter_teams.xml
+++ b/ProyectoFinalAndroid/app/src/main/res/layout/adapter_teams.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+
+    >
 
     <ImageView
-        android:layout_width="200px"
-        android:layout_height="200px"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         android:id="@+id/imagenRecyclerView"
-        android:src="@drawable/england"
         />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:textSize="40dp"
+        android:textAlignment="center"
+        android:textSize="40sp"
         android:textColor="@color/white"
         android:id="@+id/textViewRecyclerView"
         />
