--- a/ProyectoFinalAndroid/app/src/main/res/layout/header_nav.xml
+++ b/ProyectoFinalAndroid/app/src/main/res/layout/header_nav.xml
@@ -18,15 +18,36 @@
         android:layout_gravity="center"
         />
 
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        android:text=""
-        android:layout_gravity="center"
-        android:id="@+id/textview_letra_header_nav"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/black"
+        android:id="@+id/textViewUsuarioCabecera"
+        android:gravity="center"
+        android:textSize="25sp"
+
         />
+
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageViewCabecera"
+        android:layout_gravity="left|center"
+        />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:id="@+id/textViewCabecera"
+        android:textSize="70sp"
+        android:textAlignment="center"
+        />
+
 
 
 </FrameLayout>
